Fixing images stretch

--- a/Styles/_job.scss
+++ b/Styles/_job.scss
@@ -111,6 +111,7 @@ $darktext: rgb(121, 121, 121);
                 .experience{
                     width: 50%;
                     h4{
+                        text-decoration: underline;
                         font-size: 1.2rem;
                         color: $lightColor;
                     }
