--- a/Styles/style.css
+++ b/Styles/style.css
@@ -19639,6 +19639,7 @@ li {
 }
 
 .job .job-container .jobCard .budgetAndExperience .experience h4 {
+  text-decoration: underline;
   font-size: 1.2rem;
   color: #054e97;
 }
